--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <scope>system</scope>
       <systemPath>${project.basedir}/sap-libs/sapjco3.jar</systemPath>
   </dependency>
+  <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-netty4-http</artifactId>
+      <version>2.23.2.fuse-7_11_1-00015-redhat-00002</version>
+    </dependency>
    <!--  <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-netty4-http</artifactId>
