--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
       <artifactId>camel-netty4-http</artifactId>
       <version>2.23.2.fuse-7_11_1-00015-redhat-00002</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.javadev</groupId>
+      <artifactId>underscore</artifactId>
+      <version>1.88</version>
+    </dependency>
+<!-- Thanks for using https://jar-download.com -->
+
    <!--  <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-netty4-http</artifactId>
