--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ endpoints.health.enabled = true
 
 logging.level.reactor.netty=DEBUG
 logging.level.io.netty=DEBUG
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
