--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ endpoints.health.enabled = true
 logging.level.reactor.netty=DEBUG
 logging.level.io.netty=DEBUG
 
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
