--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <fuse.version>7.11.1.fuse-sb2-7_11_1-00017-redhat-00002</fuse.version>
     <jackson.version>2.15.0-rc1</jackson.version>
+    <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
+     <spring.boot-version>2.7.0</spring.boot-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -29,6 +31,11 @@
   </dependencyManagement>
 
   <dependencies>
+  <dependency>
+        <groupId>javax.json</groupId>
+        <artifactId>javax.json-api</artifactId>
+        <version>1.1.4.redhat-00001</version>
+    </dependency>
     <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-spring-boot-starter</artifactId>
@@ -107,6 +114,36 @@
         </exclusion>
       </exclusions>
     </dependency>
+      <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jms-starter</artifactId>
+            <version>2.23.2.fuse-790054-redhat-00001</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-jms-client</artifactId>
+        </dependency>
+
+       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency> 
+
   </dependencies>
   <repositories>
     <repository>
@@ -163,6 +200,39 @@
   <build>
     <defaultGoal>spring-boot:run</defaultGoal>
     <plugins>
+    <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+              <execution>
+                  <id>copy-dependencies</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                      <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>
+                          ${project.build.directory}/libs
+                      </outputDirectory>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <configuration>
+        <archive>
+            <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>libs/</classpathPrefix>
+                <mainClass>
+                    ma.munisys.Application
+                </mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+</plugin>
     <!--   <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -218,6 +288,24 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring.boot-version}</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+         <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+            </plugin>
+            
     </plugins>
   </build>
   <profiles>
