--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
+             <version>2.28.0.redhat-00003</version>
         </dependency>
 
        <dependency>
