--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-debug = true
+debug = false
 logging.config=classpath:logback.xml
 
 # the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
