--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <fuse.version>7.11.1.fuse-sb2-7_11_1-00017-redhat-00002</fuse.version>
     <jackson.version>2.15.0-rc1</jackson.version>
     <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
-     <spring.boot-version>2.7.0</spring.boot-version>
+    <spring.boot-version>2.7.0</spring.boot-version>
+    <camel.version>2.23.2.fuse-790054-redhat-00001</camel.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -39,6 +40,7 @@
     <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-spring-boot-starter</artifactId>
+        <version>${camel.version}</version>
     </dependency>
     <dependency>
       <groupId>com.sap</groupId>
@@ -117,14 +119,24 @@
       <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms-starter</artifactId>
-            <version>2.23.2.fuse-790054-redhat-00001</version>
+            <version>${camel.version}</version>
         </dependency>
-
+        <dependency>
+          <groupId>org.apache.camel</groupId>
+          <artifactId>camel-jms</artifactId>
+          <version>${camel.version}</version>
+      </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
-             <version>2.28.0.redhat-00003</version>
+             <version>2.28.0</version>
         </dependency>
+       <!--  <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>artemis-commons</artifactId>
+          <version>2.27.1</version>
+      </dependency> -->
+
 
        <dependency>
             <groupId>org.springframework.boot</groupId>
