--- a/pom.xml
+++ b/pom.xml
@@ -119,24 +119,23 @@
       <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms-starter</artifactId>
-            <version>${camel.version}</version>
+           <!--  <version>${camel.version}</version> -->
         </dependency>
         <dependency>
           <groupId>org.apache.camel</groupId>
           <artifactId>camel-jms</artifactId>
-          <version>${camel.version}</version>
+          <!-- <version>${camel.version}</version> -->
       </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
-             <version>2.28.0</version>
+             <!-- <version>2.28.0</version> -->
         </dependency>
        <!--  <dependency>
           <groupId>org.apache.activemq</groupId>
           <artifactId>artemis-commons</artifactId>
           <version>2.27.1</version>
       </dependency> -->
-
 
        <dependency>
             <groupId>org.springframework.boot</groupId>
