--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ sapjco3-3.0(notFromSAP).jar
 sapjco31P_7-20009381-win64
 sapjco31P_7-70004517-linux64
 sapjidoc31P_3-80004914
+certs/certs_prod/keystore_prod_iam.jks
