iam_0.8 : /keystore_iam.jks to be mounted from external volume/configMap

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ sapjco31P_7-20009381-win64
 sapjco31P_7-70004517-linux64
 sapjidoc31P_3-80004914
 certs/certs_prod/keystore_prod_iam.jks
+SOA-SAPAdapter/*
